src/ui/snapshots/prow__ui__section_list__tests__snapshot_active_all.snap
---
source: src/ui/section_list.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
│  new (0)  stale (0)  all (10)  authored (0)              │
└──────────────────────────────────────────────────────────┘
