src/ui/snapshots/prow__ui__section_list__tests__snapshot_active_new.snap
---
source: src/ui/section_list.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
│  new (3)  stale (1)  all (5)  authored (2)               │
└──────────────────────────────────────────────────────────┘
