src/ui/snapshots/prow__ui__section_list__tests__snapshot_all_zero_counts.snap
---
source: src/ui/section_list.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
│  new (0)  stale (0)  all (0)  authored (0)               │
└──────────────────────────────────────────────────────────┘
